--- a/app/src/main/res/layout/specific_hotel_content.xml
+++ b/app/src/main/res/layout/specific_hotel_content.xml
@@ -15,71 +15,98 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="491dp"
-        android:layout_marginTop="65dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="72dp">
 
-        <TextView
-            android:id="@+id/spec_hotel_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Hotel 1"
-            app:layout_constraintHorizontal_bias="0.501"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
-        <ImageSwitcher
-            android:id="@+id/img_switcher"
-            android:layout_width="366dp"
-            android:layout_height="196dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spec_hotel_name">
+            <TextView
+                android:id="@+id/spec_hotel_name"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Hotel 1"
+                app:layout_constraintBottom_toTopOf="@+id/img_switcher"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </ImageSwitcher>
+            <ImageSwitcher
+                android:id="@+id/img_switcher"
+                android:layout_width="366dp"
+                android:layout_height="196dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="52dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/navDot1"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_marginStart="148dp"
-            android:layout_marginTop="212dp"
-            app:layout_constraintStart_toStartOf="@+id/img_switcher"
-            app:layout_constraintTop_toTopOf="@+id/img_switcher"
-            app:srcCompat="@drawable/active_circle" />
+            </ImageSwitcher>
 
-        <ImageView
-            android:id="@+id/navDot2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="212dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/navDot1"
-            app:layout_constraintTop_toTopOf="@+id/img_switcher"
-            app:srcCompat="@drawable/non_active_circle" />
+            <ImageView
+                android:id="@+id/navDot1"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginStart="148dp"
+                android:layout_marginTop="210dp"
+                app:layout_constraintStart_toStartOf="@+id/img_switcher"
+                app:layout_constraintTop_toTopOf="@+id/img_switcher"
+                app:srcCompat="@drawable/active_circle" />
 
-        <ImageView
-            android:id="@+id/navDot3"
-            android:layout_width="12dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="212dp"
-            app:layout_constraintStart_toEndOf="@+id/navDot2"
-            app:layout_constraintTop_toTopOf="@+id/img_switcher"
-            app:srcCompat="@drawable/non_active_circle" />
+            <ImageView
+                android:id="@+id/navDot2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="220dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/navDot1"
+                app:layout_constraintTop_toBottomOf="@+id/spec_hotel_name"
+                app:srcCompat="@drawable/non_active_circle" />
 
-    </android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/navDot3"
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="210dp"
+                app:layout_constraintStart_toEndOf="@+id/navDot2"
+                app:layout_constraintTop_toTopOf="@+id/img_switcher"
+                app:srcCompat="@drawable/non_active_circle" />
+
+            <TextView
+                android:id="@+id/spec_hotel_description"
+                android:layout_width="229dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="48dp"
+                android:paddingBottom="20dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_switcher" />
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
