--- a/app/src/main/res/layout/specific_hotel_content.xml
+++ b/app/src/main/res/layout/specific_hotel_content.xml
@@ -16,10 +16,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="0dp"
+        android:layout_width="355dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="72dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -50,13 +54,13 @@
 
             <ImageSwitcher
                 android:id="@+id/img_switcher"
-                android:layout_width="366dp"
-                android:layout_height="196dp"
+                android:layout_width="364dp"
+                android:layout_height="289dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="52dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.518"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +72,8 @@
                 android:id="@+id/navDot1"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginStart="148dp"
-                android:layout_marginTop="210dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginTop="300dp"
                 app:layout_constraintStart_toStartOf="@+id/img_switcher"
                 app:layout_constraintTop_toTopOf="@+id/img_switcher"
                 app:srcCompat="@drawable/active_circle" />
@@ -78,8 +82,8 @@
                 android:id="@+id/navDot2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="220dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="310dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/navDot1"
                 app:layout_constraintTop_toBottomOf="@+id/spec_hotel_name"
@@ -89,22 +93,49 @@
                 android:id="@+id/navDot3"
                 android:layout_width="12dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="210dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="300dp"
                 app:layout_constraintStart_toEndOf="@+id/navDot2"
                 app:layout_constraintTop_toTopOf="@+id/img_switcher"
                 app:srcCompat="@drawable/non_active_circle" />
 
             <TextView
                 android:id="@+id/spec_hotel_description"
-                android:layout_width="229dp"
+                android:layout_width="329dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="48dp"
-                android:paddingBottom="20dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="120dp"
+                android:paddingBottom="12dp"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_switcher" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="12dp"
+                android:text="Button"
+                app:layout_constraintEnd_toStartOf="@+id/button3"
+                app:layout_constraintTop_toTopOf="@+id/button3" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:text="Button"
+                app:layout_constraintStart_toStartOf="@+id/navDot1"
+                app:layout_constraintTop_toBottomOf="@+id/navDot2" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="12dp"
+                android:text="Button"
+                app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintTop_toTopOf="@+id/button3" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
