--- a/app/src/main/res/layout/specific_hotel_content.xml
+++ b/app/src/main/res/layout/specific_hotel_content.xml
@@ -73,8 +73,8 @@
                 android:layout_width="10dp"
                 android:layout_height="10dp"
 
-                android:layout_marginStart="140dp"
-                android:layout_marginTop="300dp"
+                android:layout_marginStart="160dp"
+                android:layout_marginTop="290dp"
                 app:layout_constraintStart_toStartOf="@+id/img_switcher"
                 app:layout_constraintTop_toTopOf="@+id/img_switcher"
                 app:srcCompat="@drawable/active_circle" />
@@ -83,8 +83,8 @@
                 android:id="@+id/navDot2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="310dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="300dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/navDot1"
                 app:layout_constraintTop_toBottomOf="@+id/spec_hotel_name"
@@ -94,8 +94,8 @@
                 android:id="@+id/navDot3"
                 android:layout_width="12dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="300dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="290dp"
                 app:layout_constraintStart_toEndOf="@+id/navDot2"
                 app:layout_constraintTop_toTopOf="@+id/img_switcher"
                 app:srcCompat="@drawable/non_active_circle" />
@@ -112,32 +112,32 @@
                 app:layout_constraintTop_toBottomOf="@+id/img_switcher" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/hotel_map_icon"
                 android:layout_width="50dp"
-                android:layout_height="38dp"
-                android:layout_marginEnd="48dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="50dp"
                 android:background="@drawable/map_btn_img"
-                app:layout_constraintEnd_toStartOf="@+id/button3"
-                app:layout_constraintTop_toTopOf="@+id/button3" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/hotel_web_icon" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/hotel_web_icon"
                 android:layout_width="52dp"
                 android:layout_height="38dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="48dp"
                 android:background="@drawable/website_btn_img"
-                app:layout_constraintStart_toStartOf="@+id/navDot1"
+                app:layout_constraintStart_toEndOf="@+id/hotel_map_icon"
                 app:layout_constraintTop_toBottomOf="@+id/navDot2" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/hotel_phone_icon"
                 android:layout_width="43dp"
                 android:layout_height="41dp"
                 android:layout_marginStart="48dp"
                 android:background="@drawable/phone_btn_img"
-                app:layout_constraintStart_toEndOf="@+id/button3"
-                app:layout_constraintTop_toTopOf="@+id/button3" />
+                app:layout_constraintStart_toEndOf="@+id/hotel_web_icon"
+                app:layout_constraintTop_toTopOf="@+id/hotel_web_icon" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
