--- a/app/src/main/res/layout/sweets_layout_listitems.xml
+++ b/app/src/main/res/layout/sweets_layout_listitems.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
     tools:context="ahmed.niaz.chinatown_tour.FoodActivity">
-
+    
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -19,18 +19,19 @@
             android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/image2"
+                android:id="@+id/image3"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/active_circle"
                 android:scaleType="centerCrop"/>
+
             <TextView
-                android:id="@+id/name2"
+                android:id="@+id/name3"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:text="Fast Food Name"
-                android:layout_below="@id/image2"
+                android:text="Sweet name"
+                android:layout_below="@+id/image3"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:layout_marginTop="5dp"
@@ -39,15 +40,8 @@
                 android:autoSizeTextType="uniform"
                 android:autoSizeMinTextSize="8sp"
                 android:autoSizeMaxTextSize="15sp"/>
-
-
-
         </RelativeLayout>
 
-
-
     </android.support.v7.widget.CardView>
-
-
-
+    
 </RelativeLayout>
