--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -28,15 +28,14 @@
 
         <Button
             android:id="@+id/history_landing_pg"
-            android:layout_width="180dp"
-            android:layout_height="152dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="366dp"
+            android:layout_height="155dp"
             android:background="@drawable/mm_history"
             android:gravity="center"
             android:text="@string/history_button"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toEndOf="@+id/itinerary_landing_pg"
-            app:layout_constraintTop_toTopOf="@+id/itinerary_landing_pg" />
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="329dp" />
 
         <Button
             android:id="@+id/poi_landing_pg"
@@ -61,18 +60,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="@+id/transport_landing_pg"
             app:layout_constraintTop_toBottomOf="@+id/transport_landing_pg" />
-
-        <Button
-            android:id="@+id/itinerary_landing_pg"
-            android:layout_width="180dp"
-            android:layout_height="152dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/mm_itinerary"
-            android:gravity="center"
-            android:text="@string/itinerary_button"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toStartOf="@+id/food_landing_pg"
-            app:layout_constraintTop_toBottomOf="@+id/food_landing_pg" />
 
         <Button
             android:id="@+id/transport_landing_pg"
