--- a/app/src/main/res/layout/activities_parent.xml
+++ b/app/src/main/res/layout/activities_parent.xml
@@ -59,7 +59,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical|center_horizontal"
-            android:text="@string/activity1_type"
+            android:text="Type"
             android:textAlignment="center"
             android:textSize="12sp"
             android:textStyle="bold"
