--- a/app/src/main/res/layout/specific_food_content.xml
+++ b/app/src/main/res/layout/specific_food_content.xml
@@ -45,6 +45,8 @@
 
     <ImageView
         android:id="@+id/foodPic"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/imageView_routes" />
 
     <ImageView
