--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white"> #FFFFFF </color>
-    <color name="light"> #B1B7DB </color>
+    <color name="colorTransparentWhite"> #cccccc </color>
+
 </resources>
