--- a/app/src/main/res/layout/activities_child.xml
+++ b/app/src/main/res/layout/activities_child.xml
@@ -23,33 +23,33 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textview_phone"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/textView_phone"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:drawableTop="@drawable/phone_btn_img"
-        android:textAlignment="center"
+        android:drawableRight="@drawable/phone_btn_img"
+        android:text="Phone"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/textview_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textview_website"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:id="@+id/textView_web"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:drawableTop="@drawable/website_btn_img"
-        android:textAlignment="center"
+        android:drawableLeft="@drawable/web_icon_48"
+        android:text="Web"
+        android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textview_description"
-        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_phone"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_phone" />
 
 </android.support.constraint.ConstraintLayout>
