--- a/app/src/main/res/layout/activities_parent.xml
+++ b/app/src/main/res/layout/activities_parent.xml
@@ -37,8 +37,8 @@
 
         <TextView
             android:id="@+id/activity_names"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="123dp"
+            android:layout_height="78dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -52,14 +52,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/activity_type"
+            android:id="@+id/activity_address"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical|center_horizontal"
-            android:text="Type"
+            android:text="Address"
             android:textAlignment="center"
             android:textSize="12sp"
             android:textStyle="bold"
